--- a/keepassxc-browser/_locales/en/messages.json
+++ b/keepassxc-browser/_locales/en/messages.json
@@ -307,6 +307,10 @@
         "message": "Please choose the credentials you want to update.",
         "description": "A popup message shown choosing what credentials user wants to update."
     },
+    "popupRememberChooseGroup": {
+        "message": "Please choose the group you want to add the new credentials.",
+        "description": "A popup message shown choosing what group user wants to use for new credentials."
+    },
     "popupLoginText": {
         "message": "Select the login information you would like to get entered into the page.",
         "description": "A popup message shown when one or multiple credentials are present."
