Finish the keyboard accessibility. Fix minor issues.

--- a/keepassxc-browser/_locales/en/messages.json
+++ b/keepassxc-browser/_locales/en/messages.json
@@ -99,6 +99,10 @@
         "message": "No logins found.",
         "description": "No logins found."
     },
+    "passwordGeneratorIcon": {
+        "message": "Password generator icon",
+        "description": "Alt attribute text of the password generator icon."
+    },
     "passwordGeneratorPlaceholder": {
         "message": "Generated password",
         "description": "Input field placeholder for generated password."
@@ -190,6 +194,10 @@
     "defineKeyboardText": {
         "message": "You can also use the numbers to choose the input fields from keyboard.",
         "description": "Help text when choosing custom login fields."
+    },
+    "defineKeyboardHelpText": {
+        "message": "(Esc) Dismiss, (S) Skip, (A) Again, (C) Confirm, (M) Show more, (D) Discard selection",
+        "description": "Help text for keyboard navigation with custom login fields."
     },
     "username": {
         "message": "Username",
@@ -679,6 +687,10 @@
         "message": "No saved custom login fields found.",
         "description": "Shown when no saved custom credentials are saved."
     },
+    "optionsCustomFieldsTableCaption": {
+        "message": "You can manage saved custom login fields using the table below.",
+        "description": "Table caption of Custom login fields page."
+    },
     "optionsCustomFieldsTabHelpTextFirst": {
         "message": "If KeePassXC-Browser detects the wrong login fields, you are able to specify the correct fields yourself.",
         "description": "Saved custom login fields info text, first part."
@@ -686,10 +698,6 @@
     "optionsCustomFieldsTabHelpTextSecond": {
         "message": "Go to the page and click on the KeePassXC-Browser icon, then select ",
         "description": "Saved custom login fields info text, second part."
-    },
-    "optionsCustomFieldsTabHelpTextThird": {
-        "message": "On this page you can manage saved custom login fields.",
-        "description": "Saved custom login fields info text, third part."
     },
     "optionsCustomFieldsRemove": {
         "message": "Remove saved custom login fields?",
@@ -739,6 +747,14 @@
         "message": "KeePassXC-Browser will enable all features for this site and remove username-only detection.",
         "description": "Part of confirmation text when removing site preferences."
     },
+    "optionsSitePreferencesTableCaption": {
+        "message": "You can manage saved site preferences using the table below.",
+        "description": "Table caption of Site Preferences page."
+    },
+    "optionsSitePreferencesSelect": {
+        "message": "Option to ignore extension features for the page.",
+        "description": "Title text of select element in Site Preferences."
+    },
     "optionsAboutChrome": {
         "message": "Visit KeePassXC-Browser in the Chrome Web Store.",
         "description": "About page link to Chrome Web Store."
@@ -778,5 +794,13 @@
     "optionsErrorValueExists": {
         "message": "The value already exists in the list.",
         "description": "Error shown when trying to add a duplicate value to the list."
+    },
+    "openNewTab": {
+        "message": "Opens a new tab",
+        "description": "Title attribute text."
+    },
+    "httpAuthDialog": {
+        "message": "HTTP Basic Authentication dialog",
+        "description": "Options page HTTP Basic Auth dialog text"
     }
 }
